components/31-molecules/opening-hours/_opening-hours.scss
$month-day-size-mobile: 40px;
$month-day-size: 48px;
$week-breakpoint: '(min-width: 750px)';

.openinghours-widget {
  @include theme('background-color', 'color-secondary-pastel');

  font-size: .8rem;

  @media (max-width: 360px) {
    width: calc(100% + 40px);
    margin-left: -20px;
  }

  // ===
  // Week view
  // ===
  &[data-type*="week"] .openinghours {
    &--day-open .openinghours--status,
    &--time-prefix,
    &--times-between {
      display: none;
    }

    &--time-separator {
      font-size: 0;

      &::before {
        font-size: .8rem;
        content: '-';
      }
    }

    &--days {
      @extend %list-no-style;
    }

    &--day {
      margin: 0;
      padding: 15px 20px;
      font-size: .8rem;
      line-height: 175%;

      &:nth-child(even) {
        @include theme('background', 'color-secondary-light', 'opening-hours-even-background');
      }

      &-active {
        font-weight: 600;
      }
    }

    &--details {
      display: flex;
      flex-wrap: wrap;
      align-items: center;
      justify-content: space-between;
    }

    &--date {
      min-width: $bp-mobile;
    }

    &--times {
      min-width: 150px;
    }

    &--status {
      text-transform: capitalize;
    }
  }

  // ===
  // Month view
  // ===
  &[data-type="month"] {
    @include month-widget-mobile;

    @include tablet {
      @include month-widget-desktop;
    }

    font-size: .8rem;
    line-height: 1.4rem;

    & > .openinghours {
      @include tablet {
        display: inline-block;
      }
    }

    .openinghours {
      &--header,
      &--days {
        display: flex;
        width: $month-day-size-mobile * 7;

        @include phablet {
          width: $month-day-size * 7;
        }
      }

      // Header
      // ===
      &--header {
        justify-content: space-between;
        width: 100%;
        padding-bottom: 16px;

        button {
          @include theme('color', 'color-primary--darken-2', 'opening-hours-color');

          display: flex;
          align-items: center;
          justify-content: center;
          width: $month-day-size-mobile;
          height: $month-day-size-mobile *.5;
          padding: 0;
          border: 0;
          background: transparent;
          font-size: 0;
          cursor: pointer;

          @include phablet {
            width: $month-day-size;
            height: $month-day-size *.5;
          }

          &.openinghours--prev,
          &.openinghours--next {
            &::before {
              @include theme('color', 'color-zero', 'opening-hours-color');

              font-size: 1.2rem;
            }
          }

          &.openinghours--prev {
            @include icon(arrow-left);
          }

          &.openinghours--next {
            @include icon(arrow-right);
          }
        }

        .openinghours--month {
          @include bold-text;
          line-height: $month-day-size-mobile *.5;

          @include phablet {
            line-height: $month-day-size *.5;
          }
        }
      }

      &--day--day-of-week {
        @include bold-text;
        text-transform: uppercase;
      }

      &--days {
        flex-wrap: wrap;
        margin: 0;
      }

      &--day {
        @extend %list-no-style;

        &,
        > span {
          display: flex;
          flex-direction: column;
          align-items: center;
          justify-content: center;
          width: $month-day-size-mobile;
          height: $month-day-size-mobile;
          border-radius: 0;
          font-size: .8rem;
          line-height: 1.4rem;

          @include phablet {
            width: $month-day-size;
            height: $month-day-size;
          }
        }
      }

      &--day-open,
      &--day-closed {
        outline-offset: 0;
        cursor: pointer;

        &[tabindex='0'] > span,
        &:hover > span {
          @include theme('border-color', 'color-zero', 'opening-hours-color');
          border: 2px solid;
        }

        &[tabindex='0'] > span {
          @include bold-text;
        }

        &[tabindex='0'] .openinghours--details {
          display: block;
        }
      }

      &--day-open > span::after {
        @include theme('background-color', 'color-zero', 'opening-hours-color');
        display: block;
        position: relative;
        bottom: 4px;
        flex: 0 0 auto;
        width: 4px;
        height: 4px;
        border-radius: 50%;
        content: "";
      }

      &--details {
        display: none;
        position: absolute;
        width: calc(100% - #{$month-day-size-mobile * .5});
        cursor: default;

        @include phablet {
          width: calc(100% - #{$month-day-size * 2});
        }
      }

      &--date {
        @include bold-text;
        margin-bottom: 16px;
      }

      &--status {
        text-transform: capitalize;
      }

      &--time,
      &--times-between {
        display: inline;
      }
    }
  }
}

.tabs.opening-hours {
  > [role='tabpanel'] {
    padding: 0;
  }
}

